[ADD] New, more subtle and easier to find easter egg.
[ADD] /wake and /wakeup command :)
[ADD] Gun license, people need a license to be able to pick up guns(toggle with rp_license 1/0)
[ADD] rp_allow<custom team> 1/0
[ADD] Message when trying to spawn a banned prop
[ADD] Pocket swep, store things temporarilly! (rp_pocket to turn on/off)
[ADD] Sleeping players can get hurt
[FIX] Version number in the help screen
[FIX] Battering ram not working on warranted people
[FIX] Zombie spawns not saving, jailpositions not saving AND custom spawns not saving!
[FIX] People being able to spawn inside each other
[FIX] rp_max<custom team> erroring sometimes and breaking the whole fucking gamemode
[FIX] rp_grant breaking when the console enters it
[FIX] Stupid and retarded error in the player possessor :downs:
[FIX] Atefood icon showing for everyone
[FIX] Prop protection toggle not working
[FIX] Normalsalary being stored twice.
[FIX] /teamban not working
[FIX] RP_max<customteam>s unable to be set to 0
[FIX] Unable to drop custom shipment weapons
[FIX] Zombie move code(Thanks Enjia2000)
[FIX] Enhanced "players don't spawn in each other" code
[FIX] Zombies spawning in each other using the "players don't spawn in each other" code (a bit thanks to Enjia2000)
[FIX] Settings and globals not loading
[FIX] prop protection assigning all world props to the owner of the server(in case of a listen server)
[FIX] Medkit now heals to someone's max health(determined on spawn)
[FIX] Exploit: Be cop, go to sleep, change to citizen, keep arrest baton and other weapons.
[FIX] Exploit where you could duplicate food
[FIX] Zombiemod does not only spawn zombies anymore(FIX because it was there but not enabled... Idk why)
[FIX] Exploit where you could spawn banned props
[FIX] If rp_allowrpnames = 0 then people won't have rp names anymore.
[FIX] Health is not restored when you come back from sleep
[CHANGE] /buypistol to /buy because of the custom items
[CHANGE] rp_max<customteam> to rp_max<customteam>s